Correction z-index

--- a/Client/pawworkshop/src/component/core/navigation-bar/NavigationBar.css
+++ b/Client/pawworkshop/src/component/core/navigation-bar/NavigationBar.css
@@ -1,5 +1,5 @@
 .navigationBar {
-    z-index: 1337;
+    z-index: 1;
     width: 100vw;
     position: fixed;
     top: 0;
